--- a/src/styles/Certifications.module.css
+++ b/src/styles/Certifications.module.css
@@ -13,9 +13,9 @@
 
 .certificationGrid {
   display: grid;
-  grid-template-columns: repeat(4, 1fr); /* Maksimal 4 kolom dalam 1 baris */
+  grid-template-columns: repeat(4, 2fr); /* Maksimal 4 kolom dalam 1 baris */
   column-gap: 1.5rem; /* Jarak antar card di kanan-kiri */
-  row-gap: 2rem; /* Jarak antar card di atas-bawah */
+  row-gap: 1.5rem; /* Jarak antar card di atas-bawah */
   justify-items: center;
 }
 
@@ -37,15 +37,19 @@
 .certificationCard {
   background-color: #2a2a2a;
   box-shadow: 0px 4px 12px rgba(0, 0, 0, 0.3);
-  border-radius: 8px;
+  border-radius: 35px;
   overflow: hidden;
   text-align: left;
   padding: 1.5rem;
   transition: transform 0.3s ease;
-  max-width: 300px;
+  max-width: 375px;
   display: flex;
-  flex-direction: column; /* Membuat layout vertikal */
-  margin: 0; /* Menghapus margin yang tidak perlu */
+  flex-direction: column;
+  margin: 0;
+  -webkit-border-radius: 35px;
+  -moz-border-radius: 35px;
+  -ms-border-radius: 35px;
+  -o-border-radius: 35px;
 }
 
 .certificationCard:hover {
