--- a/src/styles/Certifications.module.css
+++ b/src/styles/Certifications.module.css
@@ -1,5 +1,5 @@
 .certificationsSection {
-  padding: 4rem 2rem;
+  padding: 4rem 7rem;
   background-color: #1e1e1e; /* Warna abu muda untuk kontras */
 }
 
@@ -39,8 +39,8 @@
   box-shadow: 0px 4px 12px rgba(0, 0, 0, 0.3);
   border-radius: 35px;
   overflow: hidden;
-  text-align: left;
-  padding: 1.5rem;
+  text-align: center;
+  padding: 1.2rem;
   transition: transform 0.3s ease;
   max-width: 375px;
   display: flex;
@@ -69,15 +69,17 @@
 }
 
 .certificateImage {
-  width: 100%;
+  width: 90%;
   height: auto;
   object-fit: cover;
   border-radius: 4px;
-  max-height: 200px;
+  max-height: 350px;
+  margin: 0 auto; /* INI KUNCINYA */
+  display: block;
 }
 
 .certificateTitle {
-  font-size: 1.3rem;
+  font-size: 1.4rem;
   font-weight: 600;
   margin: 0.9rem 0;
   color: #ffffff;
