--- a/src/styles/Certifications.module.css
+++ b/src/styles/Certifications.module.css
@@ -13,24 +13,47 @@
 
 .certificationGrid {
   display: grid;
-  grid-template-columns: repeat(4, 2fr); /* Maksimal 4 kolom dalam 1 baris */
-  column-gap: 1.5rem; /* Jarak antar card di kanan-kiri */
-  row-gap: 1.5rem; /* Jarak antar card di atas-bawah */
+  grid-template-columns: repeat(4, minmax(0, 1fr));
+  gap: 1.5rem;
   justify-items: center;
 }
+
 
 /* Responsivitas untuk tablet */
 @media (max-width: 1024px) {
   .certificationGrid {
     grid-template-columns: repeat(2, 1fr); /* 2 kolom untuk tablet */
   }
+    .certificationsSection {
+    padding: 3.5rem 3rem;
+  }
+    .certificationCard {
+    max-width: 100%;
+  }
 }
 
 /* Responsivitas untuk ponsel */
 @media (max-width: 600px) {
+  .certificationsSection {
+    padding: 3rem 1.5rem;
+  }
+
   .certificationGrid {
     grid-template-columns: 1fr; /* 1 kolom untuk ponsel */
     gap: 1.5rem;
+  }
+
+  .certificationCard {
+    max-width: 100%;
+    border-radius: 24px;
+  }
+
+  .certificateTitle {
+    font-size: 1.25rem;
+  }
+
+  .certificateDescription {
+    font-size: 0.95rem;
   }
 }
 
